--- a/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/DonorView.fxml
@@ -60,7 +60,7 @@
                                                       <Font name="Saira SemiCondensed Medium" size="22.0" />
                                                    </font>
                                                 </Label>
-                                                <Label alignment="CENTER" prefHeight="150.0" prefWidth="345.0" styleClass="card-content" text="2" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                <Label fx:id="labelDonationsSoFar" alignment="CENTER" prefHeight="150.0" prefWidth="345.0" styleClass="card-content" text="2" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
                                           <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="card" GridPane.columnIndex="1">
@@ -70,7 +70,7 @@
                                                       <Font name="Saira SemiCondensed Medium" size="22.0" />
                                                    </font>
                                                 </Label>
-                                                <Label alignment="CENTER" prefHeight="150.0" prefWidth="345.0" styleClass="card-content" text="30" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                <Label fx:id="labelDaysLeftUntilNextDonation" alignment="CENTER" prefHeight="150.0" prefWidth="345.0" styleClass="card-content" text="30" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
                                           <AnchorPane prefWidth="200.0" styleClass="card" GridPane.columnSpan="2" GridPane.rowIndex="1">
