--- a/DonationClient/src/main/resources/donation/client/css/MainStyle.css
+++ b/DonationClient/src/main/resources/donation/client/css/MainStyle.css
@@ -15,6 +15,12 @@
      -fx-text-fill: white;
  }
 
+#ActionButton {
+    -fx-text-fill: white !important;
+    -fx-font-size: 14px;
+    -fx-padding: 3px 10px;
+}
+
 .jfx-button.btn:hover {
     -fx-background-color: -fx-focus-color;
 }
@@ -100,6 +106,11 @@
 
 .center-pane {
     -fx-padding: 40px;
+}
+
+.middle {
+    -fx-font-size: 30px !important;
+    -fx-alignment: center;
 }
 
 /*****************************************/
