--- a/DonationClient/src/main/resources/donation/client/views/CenterView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/CenterView.fxml
@@ -372,13 +372,73 @@
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                     </TableView>
-                                    <Label fx:id="labelIdRequest" layoutX="729.0" layoutY="14.0" text="id" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                       <font>
-                                          <Font size="37.0" />
-                                       </font>
-                                    </Label>
                                     <JFXListView fx:id="listDetailsBloodStock" layoutX="80.0" layoutY="80.0" prefHeight="135.0" prefWidth="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="0.0" />
                                     <JFXButton layoutX="40.0" layoutY="207.0" styleClass="btn" text="Add component" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="150.0" />
+                                    <GridPane hgap="20.0" layoutX="273.0" layoutY="40.0" prefHeight="175.0" prefWidth="254.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="159.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="115.0" minWidth="10.0" prefWidth="95.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Blood group:">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="RH:" GridPane.rowIndex="1">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Leukocytes qu:" GridPane.rowIndex="2">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Thrombocytes qu:" GridPane.rowIndex="3">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label text="Plasma qu:" GridPane.rowIndex="4">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="labelGroupBR" text="AB" GridPane.columnIndex="1">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="labelRhBR" text="+" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="labelLeukocytesBR" text="120 mg" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="labelThrombocytesBR" text="120 mg" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="labelPlasmaBR" text="120 mg" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                             <font>
+                                                <Font name="Saira SemiCondensed SemiBold" size="17.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </GridPane>
                                  </children>
                               </AnchorPane>
                            </center>
